--- a/website/package.json
+++ b/website/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
+    "node-sass": "^4.12.0",
     "popper": "^1.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
