--- a/website/package.json
+++ b/website/package.json
@@ -3,15 +3,16 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.2",
     "bootstrap": "^4.3.1",
-    "jquery": "^3.4.1",
-    "node-sass": "^4.12.0",
+    "jquery": "^3.5.1",
+    "node-sass": "^4.14.1",
     "popper": "^1.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-modal-image": "^2.4.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "^3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
