--- a/webservice/gcc-webservice/requirements.txt
+++ b/webservice/gcc-webservice/requirements.txt
@@ -1,2 +1,25 @@
-Flask<1
-
+astroid==2.4.2
+bson==0.5.8
+Click==7.0
+colorama==0.4.3
+dnspython==1.16.0
+Flask==0.12.4
+Flask-Cors==3.0.8
+Flask-PyMongo==2.3.0
+gunicorn==20.0.4
+isort==4.3.21
+itsdangerous==1.1.0
+Jinja2==2.10.1
+lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
+mccabe==0.6.1
+pip==10.0.1
+pylint==2.5.3
+pymongo==3.9.0
+python-dateutil==2.8.0
+setuptools==39.0.1
+six==1.12.0
+toml==0.10.1
+typed-ast==1.4.1
+Werkzeug==0.16.0
+wrapt==1.12.1
